test for making single controller, made a reusable function update
